mdapioutput/objects/CTPHARMA__Activity__c.object
<CustomObject>

    <fields>
        <fullName>AddressId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Activities (Address)</relationshipLabel>
        <relationshipName>Account_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>CTPHARMA__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Confirmed_InProgress</fullName>
                </value>
                <value>
                    <fullName>Realized</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed_Prepared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactDegree__c</fullName>
        <formula>text(CTPHARMA__ContactId__r.Degree__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Degree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controled_asthma_number__c</fullName>
        <label>Controled Asthma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LicenseNumber__c</fullName>
        <formula>CTPHARMA__ContactId__r.License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_prescriptions__c</fullName>
        <label>Number of Prescriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partialy_Controled_asthma_number__c</fullName>
        <label>Partialy Controled Asthma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartRDLink__c</fullName>
        <label>Start RD</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Uncontroled_asthma_number__c</fullName>
        <label>Uncontroled Asthma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>Visit_KAM</fullName>
        <active>true</active>
        <label>Visit KAM</label>
    </recordTypes>
	<recordTypes>
        <fullName>DemoAudit</fullName>
        <active>true</active>
        <label>Consumer Health</label>
    </recordTypes>
	<recordTypes>
        <fullName>Mobile_DemoAudit</fullName>
        <active>false</active>
        <label>Mobile Consumer Health</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Visit_KAM</fullName>
        <active>false</active>
        <label>Mobile Visit KAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Visit</fullName>
        <active>true</active>
        <label>Mobile Visit</label>
    </recordTypes>
</CustomObject>